--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,13 @@
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
+    "paths": {
+      "@rex/core": [
+        "projects/rex-core/src/public-api",
+        "dist/rex-core/rex-core",
+        "dist/rex-core"
+      ],
+    },
     "target": "ES2022",
     "module": "ES2022",
     "useDefineForClassFields": false,
