--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ngx-translate/http-loader": "^7.0.0",
     "@ngxs/storage-plugin": "^3.8.0",
     "@ngxs/store": "^3.8.0",
+    "immer": "^9.0.21",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
