set packageManager to npm

--- a/angular.json
+++ b/angular.json
@@ -2,6 +2,9 @@
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "newProjectRoot": "projects",
+  "cli": {
+    "packageManager": "npm"
+  },
   "projects": {
     "horrea.github.io": {
       "projectType": "application",
@@ -28,8 +31,16 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
-              {"glob": "**/*", "input": "projects/rex-tools/src/assets", "output": "assets/tools/" },
-              { "glob": "**/*", "input": "node_modules/tinymce", "output": "assets/tinymce/" }
+              {
+                "glob": "**/*",
+                "input": "projects/rex-tools/src/assets",
+                "output": "assets/tools/"
+              },
+              {
+                "glob": "**/*",
+                "input": "node_modules/tinymce",
+                "output": "assets/tinymce/"
+              }
             ],
             "styles": [
               "src/styles.scss"
@@ -98,6 +109,16 @@
               "src/styles.scss"
             ],
             "scripts": []
+          }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {
+            "prerender": false,
+            "ssr": false,
+            "browserTarget": "horrea.github.io:build:production",
+            "firebaseProject": "horrea-2e5b4",
+            "firebaseHostingSite": "horrea-2e5b4"
           }
         }
       }
@@ -226,7 +247,11 @@
             "assets": [
               "projects/rex-blog/src/favicon.ico",
               "projects/rex-blog/src/assets",
-              { "glob": "**/*", "input": "node_modules/tinymce", "output": "/tinymce/" }
+              {
+                "glob": "**/*",
+                "input": "node_modules/tinymce",
+                "output": "/tinymce/"
+              }
             ],
             "styles": [
               "src/styles.scss"
@@ -324,7 +349,11 @@
             "assets": [
               "projects/rex-tools/src/favicon.ico",
               "projects/rex-tools/src/assets",
-              { "glob": "**/*", "input": "node_modules/tinymce", "output": "/tinymce/" }
+              {
+                "glob": "**/*",
+                "input": "node_modules/tinymce",
+                "output": "/tinymce/"
+              }
             ],
             "styles": [
               "src/styles.scss",
