--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "horrea.github.io",
   "version": "0.0.0",
   "scripts": {
-    "ng": "ng generate app rex-tools",
+    "ng": "ng",
     "start": "ng serve --proxy-config proxy.config.json",
     "start:blog": "ng serve --project rex-blog --proxy-config proxy.config.json",
     "start:tools": "ng serve --project rex-tools --proxy-config proxy.config.json",
@@ -17,6 +17,7 @@
     "@angular/common": "^15.2.0",
     "@angular/compiler": "^15.2.0",
     "@angular/core": "^15.2.0",
+    "@angular/fire": "^7.5.0",
     "@angular/forms": "^15.2.0",
     "@angular/material": "^15.2.0",
     "@angular/platform-browser": "^15.2.0",
